feat: improve resilience for unstable network connections

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,28 @@
+# Discord Configuration
 DISCORD_TOKEN=
 DISCORD_GUILD_ID=
+
+# Spotify Configuration (Optional)
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
+
+# --- (Optional could ve leaved as is) ---
+# Network Resilience Configuration
+# Exponential backoff settings for network failures
+NETWORK_BACKOFF_BASE_SEC=2.0
+NETWORK_BACKOFF_MAX_SEC=300.0
+
+# Circuit breaker: trigger OFFLINE state after N failures in time window
+NETWORK_FAIL_WINDOW_SEC=120.0
+NETWORK_FAIL_THRESHOLD=5
+
+# Auto-restart bot process when network is dead (requires supervisor like pm2/systemd)
+ENABLE_PROCESS_RESTART_ON_NETWORK_DEAD=false
+
+# HTTP timeout settings (seconds)
+AIOHTTP_TOTAL_TIMEOUT_SEC=60.0
+AIOHTTP_CONNECT_TIMEOUT_SEC=10.0
+
+# Enable aiodns resolver for better DNS handling (requires aiodns package)
+ENABLE_AIODNS_RESOLVER=true
+# --- (Optional could ve leaved as is) ---
