feat: reorganize commands and bug fixes

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,13 @@ AIOHTTP_CONNECT_TIMEOUT_SEC=10.0
 # Enable aiodns resolver for better DNS handling (requires aiodns package)
 ENABLE_AIODNS_RESOLVER=true
 # --- (Optional could ve leaved as is) ---
+
+# --- Audio Quality Configuration ---
+# Audio format: "opus" (recommended - smaller files, no re-encoding) or "mp3" (legacy)
+DJE_AUDIO_FORMAT=opus
+# Bitrate in kbps (64-320). 128 is a good balance of quality and size
+DJE_AUDIO_BITRATE=128
+# Enable audio normalization for consistent volume across tracks
+DJE_AUDIO_NORMALIZE=false
+# Enable verbose audio debugging (shows FFmpeg options, retry attempts, etc.)
+DJE_AUDIO_DEBUG=false
